@@ -1,8 +1,14 @@
 TODO
+    - Loftar map
+        - follow camera + offset (akin to minimap)
+        - Auto mark caves and ???
+        - Ridges on the map
+        - clickable icons on loftar's map for local area minimap icons
+        - Ability to hide the icon list
+    - Follow movement should point a pointer on the gob you're chasing - Make this an option
+    - Party members send grid id, offset every x seconds to override loftar's stuff? - Make this an option
     - Need to polish queued movement. Some things cancel it that shouldn't.. can't rely on old tricks
-    - Always on fight deck hotbar
-    - Alt + Right click map tile -> "Mark for party", Same idea as Gob but for a specific map tile
-        - Will need to be sent { GridID, OffsetInGrid } since GC are not the same for everyone?
+    - Always on fight deck hotbar?
     - Fix up Water tiles. The skybox under them is ugly and doesn't fit with the rest of the game.
         - The top transparent layer has weird oddities with it
         - Realistically the water color itself should be at the level where the transparent part is rather than lowered
