@@ -1,3 +1,8 @@
+3/2/19
+    - Belts will now save window position
+    - Locking a window will be remember like position now
+
+
 3/1/19
     - Can now mark tiles with Alt + right click -> Mark for party
 
